fixed the links in the footer and changed the z-index on the right side so the links are clickable

--- a/src/components/domains/Footer.css
+++ b/src/components/domains/Footer.css
@@ -35,6 +35,8 @@ footer {
 }
 .Footer .right-side {
   text-align: end;
+  position: relative;
+  z-index: 5;
 }
 .Footer .github-link a {
   font-size: 1rem;
